--- a/simu.ipynb
+++ b/simu.ipynb
@@ -811,6 +811,244 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dữ liệu gốc (64 bit): [1 0 0 1 1 0 1 1 0 0 0 1 1 0 1 0 1 1 0 0 0 1 0 1 1 1 0 0 1 0 1 0 0 0 0 0 0\n",
+      " 0 0 1 0 0 0 0 0 1 1 1 0 0 0 1 1 1 0 0 0 1 0 0 0 0 0 0]\n",
+      "Dữ liệu sau mã hóa (71 bit): [0 0 1 0 0 0 1 1 1 0 1 1 0 0 0 1 1 1 0 1 0 1 1 0 0 0 1 0 1 1 1 1 0 0 1 0 1\n",
+      " 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 1 1 0 0 0 1 1 1 0 0 0 1 1 0 0 0 0 0 0]\n",
+      "Dữ liệu nhận được (có lỗi): [0 0 1 0 0 0 1 1 1 0 1 1 0 0 0 1 1 1 0 0 0 1 1 0 0 0 1 0 1 1 1 1 0 0 1 0 1\n",
+      " 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 1 1 0 0 0 1 1 1 0 0 0 1 1 0 0 0 0 0 0]\n",
+      "Dữ liệu sau giải mã (64 bit): [1 0 0 1 1 0 1 1 0 0 0 1 1 0 1 0 1 1 0 0 0 1 0 1 1 1 0 0 1 0 1 0 0 0 0 0 0\n",
+      " 0 0 1 0 0 0 0 0 1 1 1 0 0 0 1 1 1 0 0 0 1 0 0 0 0 0 0]\n",
+      "Đã phát hiện lỗi và sửa tại vị trí: 20\n",
+      "Giải mã thành công: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def hamming_encode_71_64(input_bits):\n",
+    "    \"\"\"\n",
+    "    Mã hóa dữ liệu với mã Hamming (71, 64).\n",
+    "\n",
+    "    Args:\n",
+    "        input_bits (numpy array): Mảng numpy chứa 64 bit dữ liệu đầu vào.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy array: Chuỗi 71 bit đã mã hóa.\n",
+    "    \"\"\"\n",
+    "    if len(input_bits) != 64:\n",
+    "        raise ValueError(\"Dữ liệu đầu vào phải có 64 bit.\")\n",
+    "\n",
+    "    encoded_bits = np.zeros(71, dtype=int)\n",
+    "    data_index = 0\n",
+    "\n",
+    "    # Chèn dữ liệu vào các vị trí không phải là 2^i\n",
+    "    for i in range(71):\n",
+    "        if (i + 1) & i != 0:  # Các vị trí không phải là 2^i\n",
+    "            encoded_bits[i] = input_bits[data_index]\n",
+    "            data_index += 1\n",
+    "\n",
+    "    # Tính toán các bit kiểm tra tại các vị trí 2^i\n",
+    "    for i in range(7):  # Các vị trí kiểm tra tại 1, 2, 4, 8, 16, 32, 64\n",
+    "        parity_pos = 2**i - 1\n",
+    "        parity_value = 0\n",
+    "        for j in range(71):\n",
+    "            if (j + 1) & (parity_pos + 1) != 0:\n",
+    "                parity_value ^= encoded_bits[j]\n",
+    "        encoded_bits[parity_pos] = parity_value\n",
+    "\n",
+    "    return encoded_bits\n",
+    "\n",
+    "\n",
+    "def hamming_decode_71_64(received_bits):\n",
+    "    \"\"\"\n",
+    "    Giải mã mã Hamming (71, 64) và sửa lỗi nếu phát hiện.\n",
+    "\n",
+    "    Args:\n",
+    "        received_bits (numpy array): Mảng numpy chứa 71 bit dữ liệu đã nhận.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy array: Chuỗi dữ liệu sau khi giải mã (64 bit).\n",
+    "        int: Vị trí lỗi (nếu có, 0 nếu không có lỗi).\n",
+    "    \"\"\"\n",
+    "    if len(received_bits) != 71:\n",
+    "        raise ValueError(\"Dữ liệu đầu vào phải có 71 bit.\")\n",
+    "\n",
+    "    # Ma trận kiểm tra H (7 x 71)\n",
+    "    H = np.array([[int(bit) for bit in format(i + 1, '07b')] for i in range(71)]).T\n",
+    "\n",
+    "    # Tính hội chứng (syndrome)\n",
+    "    syndrome = np.dot(H, received_bits) % 2\n",
+    "    error_position = int(''.join(map(str, syndrome)), 2)  # Chuyển hội chứng sang vị trí lỗi\n",
+    "\n",
+    "    # Nếu có lỗi (error_position != 0), sửa lỗi\n",
+    "    corrected_bits = received_bits.copy()\n",
+    "    if error_position != 0:\n",
+    "        corrected_bits[error_position - 1] ^= 1  # Lật bit tại vị trí lỗi\n",
+    "\n",
+    "    # Loại bỏ các bit kiểm tra (chỉ lấy 64 bit dữ liệu)\n",
+    "    decoded_bits = []\n",
+    "    for i in range(71):\n",
+    "        if (i + 1) & i != 0:  # Loại bỏ các vị trí 2^i\n",
+    "            decoded_bits.append(corrected_bits[i])\n",
+    "\n",
+    "    return np.array(decoded_bits), error_position\n",
+    "\n",
+    "\n",
+    "# --- Ví dụ sử dụng ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Tạo dữ liệu 64 bit\n",
+    "    data_bits = np.random.randint(0, 2, 64)\n",
+    "\n",
+    "    print(f\"Dữ liệu gốc (64 bit): {data_bits}\")\n",
+    "\n",
+    "    # Encode\n",
+    "    encoded_bits = hamming_encode_71_64(data_bits)\n",
+    "    print(f\"Dữ liệu sau mã hóa (71 bit): {encoded_bits}\")\n",
+    "\n",
+    "    # Tạo lỗi tại một vị trí (ví dụ: vị trí 20)\n",
+    "    received_bits = encoded_bits.copy()\n",
+    "    received_bits[19] ^= 1  # Tạo lỗi tại vị trí 20 (1-based index)\n",
+    "    print(f\"Dữ liệu nhận được (có lỗi): {received_bits}\")\n",
+    "\n",
+    "    # Decode\n",
+    "    decoded_bits, error_position = hamming_decode_71_64(received_bits)\n",
+    "    print(f\"Dữ liệu sau giải mã (64 bit): {decoded_bits}\")\n",
+    "    if error_position == 0:\n",
+    "        print(\"Không phát hiện lỗi.\")\n",
+    "    else:\n",
+    "        print(f\"Đã phát hiện lỗi và sửa tại vị trí: {error_position}\")\n",
+    "\n",
+    "    # Kiểm tra dữ liệu gốc và dữ liệu sau giải mã\n",
+    "    print(f\"Giải mã thành công: {np.array_equal(data_bits, decoded_bits)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1,\n",
+       "        0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0]),\n",
+       " array([0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0,\n",
+       "        1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1,\n",
+       "        1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0]),\n",
+       " array([0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1,\n",
+       "        1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1,\n",
+       "        0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1]),\n",
+       " array([1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1,\n",
+       "        0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0,\n",
+       "        1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1]),\n",
+       " array([1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0,\n",
+       "        1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
+       "        1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0]),\n",
+       " array([1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1,\n",
+       "        0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "        0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0]),\n",
+       " array([1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1,\n",
+       "        1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1,\n",
+       "        1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0]),\n",
+       " array([0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "        0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0,\n",
+       "        0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0]),\n",
+       " array([0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0,\n",
+       "        1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0,\n",
+       "        0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0]),\n",
+       " array([0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0,\n",
+       "        0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1,\n",
+       "        1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1]),\n",
+       " array([1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0,\n",
+       "        1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0,\n",
+       "        0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0]),\n",
+       " array([0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1,\n",
+       "        1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+       "        1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1]),\n",
+       " array([0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0,\n",
+       "        0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1,\n",
+       "        0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0]),\n",
+       " array([1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1,\n",
+       "        1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "        0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0]),\n",
+       " array([1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1,\n",
+       "        1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1]),\n",
+       " array([1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0,\n",
+       "        1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0,\n",
+       "        1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1]),\n",
+       " array([0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0,\n",
+       "        1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0,\n",
+       "        0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0]),\n",
+       " array([1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0,\n",
+       "        0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0,\n",
+       "        1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1]),\n",
+       " array([0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1,\n",
+       "        1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1,\n",
+       "        0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0]),\n",
+       " array([1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1,\n",
+       "        0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0,\n",
+       "        1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1]),\n",
+       " array([0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1,\n",
+       "        1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0,\n",
+       "        0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0]),\n",
+       " array([0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1,\n",
+       "        1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0,\n",
+       "        0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0]),\n",
+       " array([0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+       "        1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
+       "        1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1]),\n",
+       " array([1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1,\n",
+       "        1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "        1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0]),\n",
+       " array([0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0,\n",
+       "        1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0,\n",
+       "        1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1]),\n",
+       " array([1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0,\n",
+       "        0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0,\n",
+       "        0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1]),\n",
+       " array([1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1,\n",
+       "        0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1,\n",
+       "        1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       " array([1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0,\n",
+       "        1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0,\n",
+       "        0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0]),\n",
+       " array([0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1,\n",
+       "        0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "        1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0]),\n",
+       " array([1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0,\n",
+       "        1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0,\n",
+       "        0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1]),\n",
+       " array([1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0,\n",
+       "        0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0]),\n",
+       " array([0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0,\n",
+       "        0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0,\n",
+       "        1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1])]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_to_send = [np.random.randint(0, 2, 64) for _ in range(32)]\n",
+    "data_to_send"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -1055,6 +1293,26 @@
     "\n",
     "sender_thread.join()\n",
     "receiver_thread.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x01\\x01\\x00\\x00\\x01\\x01\\x01\\x00\\x00'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "encoded_data = np.array([0, 1, 1, 0, 0, 1, 1, 1, 0, 0], dtype=np.uint8)\n",
+    "byte_data = encoded_data.tobytes()\n",
+    "print(byte_data)  # Output: b'\\x03\\x18'\n"
    ]
   }
  ],
