--- a/simu.ipynb
+++ b/simu.ipynb
@@ -1049,16 +1049,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0, 16), (1, 0), (0, 16), (1, 129)]"
+       "[(1, 0), (1, 0), (1, 0), (1, 0)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,26 +1070,22 @@
     "encoded_data = [1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1]\n",
     "\n",
     "# Mô phỏng lỗi bit\n",
-    "error = 0.01\n",
+    "error = 0.1\n",
     "corrupted_data = []\n",
+    "\n",
     "for bit in encoded_data:\n",
     "    corrupted_bit = bit\n",
-    "    # Chuyển đổi corrupted_bit thành chuỗi nhị phân để có thể lật các bit\n",
-    "    corrupted_bit_str = format(corrupted_bit, '08b')  # Đảm bảo rằng chúng có 8 bit\n",
-    "    for i in range(len(corrupted_bit_str)):\n",
-    "        if random.random() < error:\n",
-    "            # Lật bit tại vị trí i\n",
-    "            corrupted_bit_str = corrupted_bit_str[:i] + ('1' if corrupted_bit_str[i] == '0' else '0') + corrupted_bit_str[i+1:]\n",
-    "            \n",
-    "    # Chuyển đổi lại chuỗi nhị phân thành số nguyên và thêm vào corrupted_data\n",
-    "    corrupted_bit = int(corrupted_bit_str, 2)  # Chuyển lại chuỗi nhị phân thành số nguyên\n",
+    "    # Giữ nguyên giá trị bit (không cần chuyển thành chuỗi nhị phân)\n",
+    "    if random.random() < error:\n",
+    "        # Lật bit nếu cần\n",
+    "        corrupted_bit = 1 - bit  # Nếu bit = 0 thì đổi thành 1, nếu bit = 1 thì đổi thành 0\n",
+    "        \n",
     "    corrupted_data.append(corrupted_bit)\n",
     "\n",
     "# So sánh chuỗi gốc và chuỗi bị lỗi\n",
     "differences = [(original, corrupted) for original, corrupted in zip(encoded_data, corrupted_data) if original != corrupted]\n",
     "\n",
-    "differences\n",
-    "\n"
+    "differences\n"
    ]
   },
   {
